--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -78,14 +78,12 @@ window#waybar.empty {
 #battery,
 #tray,
 #pulseaudio,
-#backlight {
-    color: @light-blue;
-    background-color: @bg;
-    margin: 0 6px 0 6px;
-    padding: 0 15px 0 15px; /* top, right, bottom, left */
-}
-
-#network {
+#backlight,
+#clock,
+#network,
+#memory,
+#cpu,
+#disk {
     color: @light-blue;
     background-color: @bg;
     margin: 0 6px 0 6px;
@@ -94,10 +92,6 @@ window#waybar.empty {
 
 #clock {
     color: @light-green;
-    background-color: @bg;
-    margin: 0 0 0 6px;
-    padding: 0 15px 0 15px;
-
     transition: all 0.3s ease-in-out;
 }
 
@@ -113,4 +107,14 @@ window#waybar.empty {
     color: @light-orange;
 }
 
+#cpu {
+    color: @light-blue;
+}
 
+#memory {
+    color: @light-green;
+}
+
+#disk {
+    color: @light-orange;
+}
